# smaug-desktop

./: README.md  package.json
.github/workflows/: tauri.yml
.storybook/: main.js
pkg/arch/smaug-desktop/: .SRCINFO  PKGBUILD
src/: App.js  index.js  sessionStorageCache.jsx  smaug.jsx  store.jsx
src-tauri/: Cargo.toml  projects.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  project.rs  session.rs  settings.rs
src/components/: AlertTemplate.jsx  AppUpdater.jsx  BuildButton.jsx  ConfirmationDialog.jsx  DependencyList.jsx  EmptyDependencyList.jsx  EmptyProjectList.jsx  EmptyVersionList.jsx  Header.jsx  Layout.css  Layout.jsx  Layout.stories.jsx  LogRecorder.jsx  LogViewer.css  LogViewer.jsx  NewProjectDialog.jsx  NewProjectForm.jsx  NoVersionsMessage.jsx  PackageSearchInput.jsx  ProjectData.jsx  ProjectHeader.jsx  ProjectList.jsx  ProjectOverviewCard.jsx  ProjectTabs.jsx  PublishButton.jsx  RunButton.jsx  Search.jsx  Toggle.jsx  VersionList.jsx  WelcomeMessage.jsx  WindowEventHandler.jsx
src/models/: Package.jsx  Project.jsx  Settings.jsx  Sidebar.jsx  Smaugfile.jsx  Toolkit.jsx
src/pages/: Dashboard.jsx  Learn.jsx  NewProject.jsx  NoMatch.jsx  Project.jsx  Projects.jsx  System.jsx
src/pages/project/: Files.jsx  Logs.jsx  Options.jsx  Packages.jsx
src/stores/: ProjectStore.jsx
